# pod-manufacturing

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vercel.json
backend/: .env.example  Dockerfile  check_neon.py  migrate_finish_catalogue.py  migrate_finish_catalogue_link_rules.py  migrate_finish_packages.py  migrate_pod_spec_finishes.py  migrate_settings.py  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_clerk_fields.py  0003_build_up_templates.py  0004_pod_specs.py  0005_material_prices.py  0006_provisional_allowances.py  0007_skylight_rooflight_optional.py  0008_material_evidence.py  0009_buildup_cached_uvalue.py  0010_pod_spec_project_id.py  0011_account_settings.py  0012_material_evidence_notes.py  0013_material_evidence_category.py  0014_quote_pipeline.py  0015_suppliers.py  (+3 more)
backend/app/: auth.py  celery_app.py  db.py  main.py  models.py
backend/seeds/: bbr_profile.py  correct_production.py  finish_catalogue_seed.py  library_v1.py  material_evidence_seed.py  material_prices_seed.py  migrate_rename_walls.py  standard_build_ups.py  standard_materials.py  tek17_profile.py
backend/tests/: conftest.py  test_bbr_profile.py  test_build_up_api.py  test_build_up_resolver.py  test_drawing_generator.py  test_element_decomposer.py  test_material_prices.py  test_material_takeoff.py  test_mto_resolver.py  test_opening_geometry.py  test_procurement_csv.py  test_standard_build_ups.py  test_tek17_profile.py  test_u_value.py  test_workspaces.py
(+67 files in other folders)
