[project]
name = "pod-manufacturing-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "openpyxl>=3.1.5",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "seeds*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
